--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,53 @@
 * {
     box-sizing: border-box;
 }
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100vw;
+    height: 64px;
+    padding: 32px;
+    background-color: pink;
+}
+
+.shopping-bag-btn {
+    height: 58px;
+    width: 58px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 5;
+    position: absolute;
+    cursor: pointer;
+}
+
+.bag-icon {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+img {
+    width: 250px;
+}
+
+#shopping-bag {
+    top: 64px;
+    display: none;
+    min-height: 100vh;
+    width: 33%;
+    background-color: darkslateblue;
+    position: absolute;
+    right: 0;
+}
