--- a/css/product.css
+++ b/css/product.css
@@ -1,7 +1,4 @@
-#shopping-bag {
-    display: none;
-    height: 500px;
-    width: 500px;
-    background-color: darkslateblue;
+body {
+    margin: 0;
+    padding: 0;
 }
-
