--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,14 +1,44 @@
-/*#shopping-bag-btn {*/
-/*    display: none;*/
-/*}*/
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-/*header {*/
-/*    height: 100%;*/
-/*    width: 100vw;*/
-/*}*/
+#checkout-info {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
-/*body {*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    display: flex;*/
-/*}*/
+#checkout-items-list {
+    border: 1px solid #FFE5EC;
+    padding: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#checkout-items-list img {
+    width: 250px;
+}
+
+form {
+    border: 1px solid #E7C6FF;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    height: fit-content;
+}
+
+@media (min-width: 800px) {
+    #checkout-info {
+        flex-direction: row;
+        gap: 2rem;
+    }
+}
