--- a/css/styles.css
+++ b/css/styles.css
@@ -1,53 +1,46 @@
-* {
-    box-sizing: border-box;
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 100vw;
-    height: 64px;
-    padding: 32px;
-    background-color: pink;
-}
-
-.shopping-bag-btn {
-    height: 58px;
-    width: 58px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 5;
-    position: absolute;
-    cursor: pointer;
-}
-
-.bag-icon {
-    position: absolute;
-    height: 40px;
-    width: 40px;
-}
-
 body {
     margin: 0;
-    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0 70px;
 }
 
-img {
-    width: 250px;
+a {
+    text-decoration: none;
 }
 
-#shopping-bag {
-    top: 64px;
-    display: none;
-    min-height: 100vh;
-    width: 33%;
-    background-color: darkslateblue;
-    position: absolute;
-    right: 0;
+#filter-list {
+    margin: 2rem;
+    height: 2rem;
+    border: 1px solid #FFAFCC;
+    border-radius: 4px;
+    background-color: #FFE5EC;
+}
+
+#jacket-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 4rem;
+}
+
+.product-container {
+    border: 1px solid #FFE5EC;
+    border-radius: .5rem;
+    height: 100%;
+    padding: 1rem;
+}
+
+.product-container img {
+    min-width: 100px;
+    min-height: 100px;
+    max-width: 250px;
+    max-height: 250px;
+}
+
+.product-container:hover {
+    box-shadow: 10px 5px 5px #FFAFCC;
 }
